WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212342
Non-unified build fixes, late May 2020 edition
https://bugs.webkit.org/show_bug.cgi?id=212342
Summary
Non-unified build fixes, late May 2020 edition
Adrian Perez
Reported
2020-05-25 02:33:34 PDT
(G{^}{^})
Attachments
Patch
(1.89 KB, patch)
2020-05-25 02:35 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.95 KB, patch)
2020-05-25 03:58 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.88 KB, patch)
2020-05-25 04:05 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2020-05-25 02:35:32 PDT
Created
attachment 400189
[details]
Patch
EWS
Comment 2
2020-05-25 03:55:51 PDT
ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!.
Adrian Perez
Comment 3
2020-05-25 03:58:54 PDT
Created
attachment 400190
[details]
Patch for landing
EWS
Comment 4
2020-05-25 03:59:21 PDT
Tools/Scripts/svn-apply failed to apply
attachment 400190
[details]
to trunk. Please resolve the conflicts and upload a new patch.
Adrian Perez
Comment 5
2020-05-25 04:05:07 PDT
Created
attachment 400191
[details]
Patch for landing
EWS
Comment 6
2020-05-25 04:31:11 PDT
Committed
r262120
: <
https://trac.webkit.org/changeset/262120
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 400191
[details]
.
Radar WebKit Bug Importer
Comment 7
2020-05-25 04:32:13 PDT
<
rdar://problem/63594480
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug