Non-unified build fixes, late May 2020 edition https://bugs.webkit.org/show_bug.cgi?id=212342

Unreviewed build fix.

No new tests needed.


* loader/ImageLoader.h: Add missing inclusion of Element.h and remove forward declaration.
* page/PageConfiguration.h: Add missing inclusion of ShouldRelaxThirdPartyCookieBlocking.h


Canonical link: https://commits.webkit.org/225183@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262120 268f45cc-cd09-0410-ab3c-d52691b4dbfc